--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "start": "node server"
   },
   "dependencies": {
+    "babel-core": "latest",
+    "babel-loader": "latest",
+    "babel-preset-es2015": "latest",
+    "babel-preset-react": "latest",
     "bluebird": "latest",
     "body-parser": "latest",
     "cheerio": "latest",
@@ -20,8 +24,17 @@
     "express": "latest",
     "file-loader": "latest",
     "firebase": "latest",
+    "gulp": "latest",
+    "gulp-6to5": "latest",
+    "gulp-autoprefixer": "latest",
+    "gulp-concat": "latest",
+    "gulp-less": "latest",
+    "gulp-minify-css": "latest",
+    "gulp-rename": "latest",
+    "gulp-uglify": "latest",
     "hjs": "latest",
     "hogan-middleware": "latest",
+    "json-loader": "latest",
     "jsonwebtoken": "latest",
     "moment": "latest",
     "mongoose": "latest",
@@ -32,6 +45,7 @@
     "react-dropzone": "latest",
     "react-google-maps": "^6.3.0",
     "react-redux": "latest",
+    "react-slick": "^0.14.11",
     "react-time": "latest",
     "redux": "latest",
     "redux-thunk": "latest",
@@ -39,20 +53,7 @@
     "stripe": "latest",
     "superagent": "latest",
     "turbo360": "latest",
-    "webpack": "latest",
-    "babel-core": "latest",
-    "babel-loader": "latest",
-    "babel-preset-es2015": "latest",
-    "babel-preset-react": "latest",
-    "json-loader": "latest",
-    "gulp": "latest",
-    "gulp-6to5": "latest",
-    "gulp-autoprefixer": "latest",
-    "gulp-concat": "latest",
-    "gulp-less": "latest",
-    "gulp-minify-css": "latest",
-    "gulp-rename": "latest",
-    "gulp-uglify": "latest"    
+    "webpack": "latest"
   },
   "devDependencies": {
     "chai": "latest",
