--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "server": true,
   "scripts": {
+    "test": "jest",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && NODE_ENV=production webpack && gulp prod",
     "postinstall": "npm run build",
@@ -55,8 +56,11 @@
     "webpack": "latest"
   },
   "devDependencies": {
+    "babel-jest": "^20.0.3",
+    "babel-polyfill": "^6.23.0",
     "chai": "latest",
     "chai-http": "latest",
+    "jest": "^20.0.3",
     "mocha": "latest",
     "mocha-jscs": "latest",
     "mocha-jshint": "latest"
