--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "babel-polyfill": "^6.23.0",
     "chai": "latest",
     "chai-http": "latest",
+    "gulp-sourcemaps": "^2.6.0",
     "jest": "^20.0.3",
     "mocha": "latest",
     "mocha-jscs": "latest",
